<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CapraNeagra">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/zimbrul" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="64dp"
                android:padding="4dp"
                android:text="@string/titleZimbru"
                android:textSize="24sp"
                app:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/textViewZimbru"
                android:textSize="18sp"
                app:fontFamily="sans-serif" />

            <Button
                android:id="@+id/buttonZimbru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonInfo" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>